2002-06-27  Dick Porter  <dick@ximian.com>

	* threads.c: Store the handle in both the parent thread and in the
	subthread, to minimise the time between starting a new thread and
	storing its ID.

2002-06-26  Dick Porter  <dick@ximian.com>

	* appdomain.c (mono_runtime_cleanup): Close the socket library
	after all the threads have finished, not before

2002-06-26  Martin Baulig  <martin@gnome.org>

	* debug-symfile.c (mono_debug_find_source_location): Added
	`guint32 *line_number' argument.  If it's not NULL, store the line number
	there and return the file name without the line number.

2002-06-25  Dick Porter  <dick@ximian.com>

	* icall.c:
	* process.h:
	* process.c: Process forking and other support functions

2002-06-25  Dick Porter  <dick@ximian.com>

	* image.c (do_mono_image_open): Set ref_count to 1, so that bad
	things dont happen when the image is closed.
	(mono_image_lookup_resource): Walk the resource section looking
	for a particular entry

	* cil-coff.h: PE resource section decoding

2002-06-25  Dick Porter  <dick@ximian.com>
	
	* assembly.h:
	* assembly.c: 
	(mono_assembly_foreach): Accessor functions to walk the list of
	loaded assemblies
	(mono_assembly_set_main):
	(mono_assembly_get_main): Process methods need to know which
	assembly is the "main" one

	* object.c (mono_runtime_run_main): Record the main assembly

	* debug-helpers.c: Fix typo

2002-06-24  Dietmar Maurer  <dietmar@ximian.com>

	* icall.c (ves_icall_System_Runtime_InteropServices_Marshal_copy_to_unmanaged): impl.
	(ves_icall_System_Runtime_InteropServices_Marshal_copy_from_unmanaged): impl.

Sat Jun 22 11:37:25 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix off-by-one in Assembly.GetTypes() reported by bob@karr.ath.cx.

2002-06-21  Miguel de Icaza  <miguel@ximian.com>

	* image.c (do_mono_image_open): Initialize reference count,
	otherwise we leak the MonoImage.

Fri Jun 21 19:16:47 CEST 2002 Paolo Molaro <lupus@ximian.com>
